# CG_Games_homework

./: README.md
Assignment0/Transformation/: CMakeCache.txt  Makefile  Transformation  cmake_install.cmake  main  main.cpp
Assignment1/code/: CMakeLists.txt  Makefile  Rasterizer  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp  readme.txt
Assignment1/代码框架/: CMakeCache.txt  Makefile  Triangle.cpp  cmake_install.cmake  main.cpp  rasterizer.cpp
Assignment2/代码框架/: CMakeCache.txt  Makefile  Triangle.cpp  cmake_install.cmake  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: CMakeCache.txt  Makefile  Shader.hpp  Triangle.cpp  cmake_install.cmake  main.cpp  rasterizer.cpp  rasterizer.hpp  readme.txt
Assignment4/code/: main.cpp
Assignment5/Code/: Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Assignment6/PA6/Assignment6/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeCache.txt  Intersection.hpp  Makefile  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  cmake_install.cmake  global.hpp  main.cpp
Assignment7/PA7/Assignment7/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeCache.txt  Intersection.hpp  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  (+4 more)
Assignment8/: CMakeCache.txt  Makefile  cmake_install.cmake
Assignment8/CGL/: CMakeCache.txt  Makefile  cmake_install.cmake
Assignment8/src/: CMakeCache.txt  Makefile  application.cpp  application.h  cmake_install.cmake  main.cpp  readme.txt  rope.cpp
(+2 files in other folders)
